# hand_tracking

./: .flake8  .pre-commit-config.yaml  Pipfile  finger_count.py  hand_tracking.py  pyproject.toml  range_fingers.py  settings.py  tasks.py  volume_control.py
apps/: ascii_art.py  face_detect_basic.py  face_detector.py  face_distance_cam.py  face_mesh_detect_basic.py  face_mesh_detector.py  finger_count.py  finger_detect.py  hand_land_marks.py  hand_tracking.py  intelbras_streaming.py  pose_estimation_detect_basic.py  range_fingers.py  sentiment_analysis_detect.py  utils.py  video_ascii.py  volume_control.py
apps/face_recognition/: capture.py  faces_recognizer.py  recognizer_eigenfaces.py  recognizer_fisherfaces.py  recognizer_lbphfaces.py  training.py
apps/games/: game_of_life.py  game_of_life2.py  game_of_life3.py  gema_of_life_pygame.py
apps/ia2042/: recognizer.py
apps/linked_in/opencv/: 02_01.py  02_02.ipynb  02_03.py  02_04.py  02_05.py  02_06.py  02_07.py  02_08.py  02_09.py  02_10.py  03_02.py  03_03.py  03_04.py  03_06.py  03_07.py
apps/open/: ave_maria.py  test_open_ai.py  test_whisper.py  token_jwt.py
apps/open/audio/: audio.m4a
apps/open/base/: utils.py
core/: abstract_middleware.py  face_detector.py  face_mesh_detector.py  hand_land_marks.py  hand_tracking.py  pose_estimation_detector.py  range_fingers.py  utils.py  video_capture.py
data/training/: FisherFace.yml  LBPHFace.yml
